--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
+                                    <button class="btn btn-primary text-white w-100 py-3" type="submit">Send Message</button>
                                 </div>
                             </div>
                         </form>
