--- a/custom.html
+++ b/custom.html
@@ -82,7 +82,43 @@
         </div>
     </div>
     <!-- Page Header End -->
+    <!-- Custom Start -->
+    <div class="container-fluid overflow-hidden py-5 px-lg-0">
+        <div class="container feature py-5 px-lg-0">
+            <div class="row g-5 mx-lg-0">
+                <div class="col-lg-6 feature-text wow fadeInUp" data-wow-delay="0.1s">
+                    <h1 class="mb-5">We Are Trusted Logistics Company </h1>
+                    <div class="d-flex mb-5 wow fadeInUp" data-wow-delay="0.3s">
 
+                        <div class="ms-4">
+
+                            <p class="mb-0">Riddhi Siddhi Co. offers a comprehensive service portfolio with professional customs clearance services for import and export consignments by air or sea at all major Air Ports, Sea Ports and ICD’s.</P>
+                        </div>
+                    </div>
+                    <div class="d-flex mb-5 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="ms-4">
+                            <h5>Services Include:</h5>
+                            <p class="mb-0">
+                                -> Customs Clearance at all major Indian ports (Sea & Air) <br> -> Customs Documentation <br> -> Examination of shipments Bonding & De-bonding <br> -> Getting permission/Clearance from <br> a) Plant and Quarantine Department
+                                (Imports & Exports)<br> b) Port Health Department<br> c) FSSAI<br> d) Drug Controller ( ADC)<br> e) Textile Committee etc.<br> -> Speedy and hassle-free clearances of the cargo through Indian Customs Department<br> -> Facilitate
+                                setting up EDP System for SEZ and EOU clients<br> -> Ensure smooth functioning to deliver error-free documents for export and Import shipments<br> -> Our collaboration with highly experienced personnel ensures state of
+                                the art services are provided.<br> -> We have expertise in clearing machinery, spares, consumables , Pharmaceuticals , FMCG, Retail goods and handling of raw materials under EPCG, DEPB, DEEC etc. and shipments under Carnet
+
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-6 pe-lg-0 wow fadeInRight" data-wow-delay="0.1s" style="min-height: 400px;">
+                    <div class="position-relative h-100">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/truck.jpg" style="object-fit: cover;" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Custom End -->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
