--- a/oceanfreight.html
+++ b/oceanfreight.html
@@ -72,7 +72,39 @@
         </div>
     </nav>
     <!-- Navbar End -->
+    <!-- Feature Start -->
+    <div class="container-fluid overflow-hidden py-5 px-lg-0">
+        <div class="container feature py-5 px-lg-0">
+            <div class="row g-5 mx-lg-0">
+                <div class="col-lg-6 feature-text wow fadeInUp" data-wow-delay="0.1s">
+                    <h1 class="mb-5">We Are Trusted Logistics Company </h1>
+                    <div class="d-flex mb-5 wow fadeInUp" data-wow-delay="0.3s">
 
+                        <div class="ms-4">
+
+                            <p class="mb-0">Riddhi Siddhi Co. offers a complete nation-wide coverage across all major ports within India. We offer competitive Sea freight rates and tailor made door to door services. Riddhi Siddhi Co. also offers customers with bonded
+                                facilities for the ease of inbound movements.</p>
+                        </div>
+                    </div>
+                    <div class="d-flex mb-5 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="ms-4">
+                            <h5>Some of the salient features are:</h5>
+                            <p class="mb-0">
+                                -> FCL Container services <br> -> LCL Services<br> -> Break Bulk Services<br> -> Import & Export consolidation services<br> -> Door to Door services<br> -> Special commodity service such as temperature controlled <br> cargo,
+                                GOH containers<br> -> Over Dimensional cargo<br> -> Carnet<br> -> Insurance<br> -> Transportation</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-6 pe-lg-0 wow fadeInRight" data-wow-delay="0.1s" style="min-height: 400px;">
+                    <div class="position-relative h-100">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/carousel-1.jpg" style="object-fit: cover;" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Feature End -->
 
 
 
