--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">RIDDHI SIDDHI & Co.</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">EMPATHETIC <span class="text-primary">INTELLIGENCE
+                                <h1 class="display-3 text-white animated slideInDown mb-4">EMPATHETIC <span class="text-white">INTELLIGENCE
                                 </span> </h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">WE PUT OURSELVES IN YOUR SHOES TO GROW YOUR BUSINESS
                                 </p>
@@ -134,7 +134,7 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Transport & Logistics Solution</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">YOUR EXPERT FOR <span class="text-primary"> TEMPCHAIN
+                                <h1 class="display-3 text-white animated slideInDown mb-4">YOUR EXPERT FOR <span class="text-white"> TEMPCHAIN
                                 </span> SOLUTIONS</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">The unique spectrum of choice reaches from -50 °C to +25°C, providing you with temperature- controlled solutions for almost every drug.</p>
 
@@ -164,12 +164,12 @@
                         best possible time. We firmly believe in the power of togetherness. Our team is our biggest strength and as a team we swim and sink together.</p>
                     <div class="row g-4 mb-5">
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
-                            <i class="fa fa-handshake fa-3x text-primary mb-3"></i>
+                            <i class="fa fa-handshake fa-3x text-grey mb-3"></i>
                             <h5>Service Guarantee</h5>
                             <p class="m-0">A good tradition of trust..</p>
                         </div>
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
-                            <i class="fa fa-thumbs-up fa-3x text-primary mb-3"></i>
+                            <i class="fa fa-thumbs-up fa-3x text-grey mb-3"></i>
                             <h5>Linking Better</h5>
                             <p class="m-0">Moving never looked so good</p>
                         </div>
