--- a/about.html
+++ b/about.html
@@ -115,12 +115,12 @@
 
                     <div class="row g-4 mb-5">
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
-                            <i class="fa fa-handshake fa-3x text-primary mb-3"></i>
+                            <i class="fa fa-handshake fa-3x text-grey mb-3"></i>
                             <h5>Service Guarantee</h5>
                             <p class="m-0">A good tradition of trust..</p>
                         </div>
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
-                            <i class="fa fa-thumbs-up fa-3x text-primary mb-3"></i>
+                            <i class="fa fa-thumbs-up fa-3x text-grey mb-3"></i>
                             <h5>Linking Better</h5>
                             <p class="m-0">Moving never looked so good</p>
                         </div>
