--- a/contact.html
+++ b/contact.html
@@ -92,29 +92,31 @@
                     <h6 class="text-secondary text-uppercase">Get In Touch</h6>
                     <h1 class="mb-4">Contact For Any Query</h1>
                     <div class="bg-light p-4">
-                        <form>
+                        <form action="https://formsubmit.co/pankaj@riddhisiddhiandco.com" method="POST">
                             <div class="row g-3">
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                        <input type="text" name="Name" class="form-control" id="name" placeholder="Your Name">
                                         <label for="name">Your Name</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                        <input type="email" name="Email" class="form-control" id="email" placeholder="Your Email">
                                         <label for="email">Your Email</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                        <input type="text" name="Subject" class="form-control" id="subject" placeholder="Subject">
                                         <label for="subject">Subject</label>
                                     </div>
                                 </div>
+                                <input type="hidden" name="_captcha" value="false">
+                                <input type="hidden" name="_template" value="table">
                                 <div class="col-12">
                                     <div class="form-floating">
-                                        <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
+                                        <textarea class="form-control" name="Message" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
                                         <label for="message">Message</label>
                                     </div>
                                 </div>
@@ -143,7 +145,7 @@
             <div class="row g-5">
                 <div class=" col-4col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>908/13, New Braham Colony,<br> Lakshmi Nagar, Sonipat,Haryana, 131001</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>1/10653 state number 4 Mohan Park |<br> Naveen Shahdara | New Delhi. 110032 |</p>
                     <a href="tel:+919971786046" class="text-white">
                         <p class="mb-2"><i class="fa fa-phone-alt  me-3"></i>+91 9971786046</p>
                     </a>
@@ -154,6 +156,7 @@
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
