--- a/custom.html
+++ b/custom.html
@@ -126,7 +126,7 @@
             <div class="row g-5">
                 <div class=" col-4col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>908/13, New Braham Colony,<br> Lakshmi Nagar, Sonipat,Haryana, 131001</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>1/10653 state number 4 Mohan Park |<br> Naveen Shahdara | New Delhi. 110032 |</p>
                     <a href="tel:+919971786046" class="text-white">
                         <p class="mb-2"><i class="fa fa-phone-alt  me-3"></i>+91 9971786046</p>
                     </a>
@@ -137,6 +137,7 @@
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
