--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <img class="img-fluid" src="img/service-1.jpg" alt="">
                         </div>
                         <h4 class="mb-3">Air Freight</h4>
-                        <p>Aardour Worldwide Logistics has a team of experts specialized in providing value added international air freight forwarding services.</p>
+                        <p>RIDDHI SIDDHI & Co has a team of experts specialized in providing value added international air freight forwarding services.</p>
 
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                             <img class="img-fluid" src="img/service-2.jpg" alt="">
                         </div>
                         <h4 class="mb-3">Ocean Freight</h4>
-                        <p>Aardour Worldwide Logistics offers a complete nation-wide coverage across all major ports within India. We offer competitive Sea freight rates and tailor made door to door services.</p>
+                        <p>RIDDHI SIDDHI & Co offers a complete nation-wide coverage across all major ports within India. We offer competitive Sea freight rates and tailor made door to door services.</p>
 
                     </div>
                 </div>
@@ -214,7 +214,7 @@
                             <img class="img-fluid" src="img/service-3.jpg" alt="">
                         </div>
                         <h4 class="mb-3">BREAK BULK</h4>
-                        <p>Cargo which is over dimensional or too heavy to be loaded onto a flat rack container can be loaded as break-bulk on board vessels. Aardour Worldwide Logistics provides best in class services for Break-Bulk Cargo .</p>
+                        <p>Cargo which is over dimensional or too heavy to be loaded onto a flat rack container can be loaded as break-bulk on board vessels. RIDDHI SIDDHI & Co provides best in class services for Break-Bulk Cargo .</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
@@ -233,7 +233,7 @@
                             <img class="img-fluid" src="img/service-5.jpg" alt="">
                         </div>
                         <h4 class="mb-3">Customs Clearance</h4>
-                        <p>Aardour Worldwide Logistics offers a comprehensive service portfolio with professional customs clearance services for import and export consignments by air.</p>
+                        <p>RIDDHI SIDDHI & Co offers a comprehensive service portfolio with professional customs clearance services for import and export consignments by air.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.7s">
@@ -242,7 +242,7 @@
                             <img class="img-fluid" src="img/service-6.jpg" alt="">
                         </div>
                         <h4 class="mb-3">Warehouse Solutions</h4>
-                        <p>Aardour Worldwide Logistics has the expertise in providing warehousing, SCM and distribution services in both multi-user facilities and in customer-specific, dedicated-user sites.</p>
+                        <p>RIDDHI SIDDHI & Co has the expertise in providing warehousing, SCM and distribution services in both multi-user facilities and in customer-specific, dedicated-user sites.</p>
                     </div>
                 </div>
             </div>
@@ -258,7 +258,7 @@
             <div class="row g-5">
                 <div class=" col-4col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>908/13, New Braham Colony,<br> Lakshmi Nagar, Sonipat,Haryana, 131001</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>1/10653 state number 4 Mohan Park |<br> Naveen Shahdara | New Delhi. 110032 |</p>
                     <a href="tel:+919971786046" class="text-white">
                         <p class="mb-2"><i class="fa fa-phone-alt  me-3"></i>+91 9971786046</p>
                     </a>
